--- a/live-coding/week-5/html5/profile.html
+++ b/live-coding/week-5/html5/profile.html
@@ -1,16 +1,16 @@
+
 <!DOCTYPE html>
 <html>
 <head>
-	<title>HTML5 Introduction</title>
+	<title>Settings</title>
 </head>
 <body>
+<h1>This is my profile</h1>
+<a href="settings.html">Go to Settings</a>
 	<button id="go-back">Go Back</button>
 	<button id="go-forward">Go Forward</button>
-
-	<button id="go-fullscreen">Go Fullscreen</button>
-
-	<a href="profile.html">Go to Profile page</a>
-	<script
+	
+<script
   src="https://code.jquery.com/jquery-3.4.1.min.js"
   integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo="
   crossorigin="anonymous"></script>
