--- a/live-coding/week-5/es5-class/index.html
+++ b/live-coding/week-5/es5-class/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<title>ES5 Class</title>
+</head>
+<body>
+	<h1>ES5 Class Session</h1>
+	<script type="text/javascript" src="User.js"></script>
+</body>
+</html>
