--- a/live-coding/week-6/flexbox/index.html
+++ b/live-coding/week-6/flexbox/index.html
@@ -1,1 +1,17 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+	<title>Flexbox Session</title>
+	<link rel="stylesheet" type="text/css" href="stylesheet.css">
+</head>
+<body>
+	<div class="flex-container">
+		<div class="flex-item">One</div>
+		<div class="flex-item">Two</div>
+		<div class="flex-item">Three</div>
+		<div class="flex-item">Four</div>
+		<div class="flex-item">Five</div>
+		<div class="flex-item">Six</div>
+	</div>
+</body>
+</html>
